--- a/info.yml
+++ b/info.yml
@@ -2,11 +2,11 @@
 
 # Required fields: unit, section and type
 
-unit: (unit here)
+unit: 1
 
-section: (section here)
+section: html/css
 
-type: (type here)
+type: exercise
 
 
 # optional fields:
